--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "google-spreadsheet": "^3.1.15"
+    "cheerio": "^1.0.0-rc.10",
+    "google-spreadsheet": "^3.1.15",
+    "puppeteer": "^10.2.0"
   }
 }
